# tietze

./: .gitignore  .hlint.yaml  CHANGELOG.md  Lafont.cabal  README.md  Tietze.cabal
tools/: DyadicRewrite.cabal  LICENSE  Lafont.cabal  README.md
tools/data/test/: bad.3.derivs  bad.gens  equational.bad.derivs  example.2.derivs  example.3.derivs  example.gens  example.rels  many.bad.derivs  many.good.derivs  summary.derivs  trivial.derivs
tools/data/test/cycle/: rel.1.derivs  rel.2.derivs  rel.3.derivs  rel.4.derivs  rel.5.a.derivs  rel.5.b.derivs
tools/data/test/dyadics/: dyadic.bad.rels  dyadic.derivs  dyadic.good.rels  dyadic.missing.rels  dyadic2.good.gens  dyadic3.good.gens
tools/data/test/products/: add.bad.rels  add.good.gens  mult.good.gens
tools/examples/: README.md
tools/examples/abgroup_semantics/: bad.rels  failure.yaml  generators.gens  relations.rels  success.yaml
tools/examples/derivations/: circuits_as_e8.rels  dyadic.rels  dyadic_as_e8.rels  e8_as_dyadic.rels  generators.gens  lemmas.derivs  proof.yaml  relations.rel  relations.rels  run.sh  s1s1.derivs  s1s2.derivs  s1s3.derivs  s1s4.derivs  s1s5.derivs  s1s6.derivs  s1s7.derivs  s1s8.derivs  s2s2.derivs  s2s3.derivs  s2s4.derivs  s2s5.derivs  s2s6.derivs  s2s7.derivs  s2s8.derivs  s3s3.derivs  s3s4.derivs  s3s5.derivs  s3s6.derivs  s3s7.derivs  s3s8.derivs  s4s4.derivs  s4s5.derivs  s4s6.derivs  s4s7.derivs  s4s8.derivs  s5s5.derivs  s5s6.derivs  s5s7.derivs  s5s8.derivs  (+13 more)
tools/examples/derivations/aux/: bifunct.derivs  cadd.derivs  cflip.derivs  commutators.derivs  lemmas.derivs  misc.derivs  mlemmas.derivs  orders.derivs  slemmas.derivs  spatial.derivs  symmetry.derivs  wlemmas.derivs
tools/examples/derivations/step1/: ccx0.derivs  cx01.derivs  k12.derivs  x0.derivs
tools/examples/derivations/step2/: s1s1.derivs  s1s2.derivs  s1s3.derivs  s1s4.derivs  s1s5.derivs  s1s6.derivs  s1s7.derivs  s1s8.derivs  s2s2.derivs  s2s3.derivs  s2s4.derivs  s2s5.derivs  s2s6.derivs  s2s7.derivs  s2s8.derivs  s3s3.derivs  s3s4.derivs  s3s5.derivs  s3s6.derivs  s3s7.derivs  s3s8.derivs  s4s5.derivs  s4s6.derivs  s4s7.derivs  s4s8.derivs  s5s6.derivs  s5s7.derivs  s5s8.derivs  s6s7.derivs  s6s8.derivs  s7s7.derivs  s7s8.derivs  s8s8.derivs
tools/examples/explicit_monoids/: README.md  error.derivs  failure.yaml  generators.gens  relations.rels  simple.derivs  success.yaml
tools/examples/implicit_abgroups/: README.md  example.yaml  generators.gens  relations.rels
tools/examples/implicit_groups/: README.md  example.yaml  generators.gens  ids.derivs
tools/examples/quantum_semantics/: bad.rels  failure.yaml  generators.gens  success.yaml
tools/examples/semi_thue_system/: apply.failure.yaml  bad.rewrite.derivs  generators.gens  relations.rels  rewrite.failure.yaml  success.yaml
tools/exe/: check_generators.hs  check_relations.hs  validate_derivations.hs  yaml_test.hs
tools/exe/CheckGenerators/: CmdLn.hs
tools/exe/CheckRelations/: CmdLn.hs  Main.hs
tools/exe/GraphDeps/: CmdLn.hs  Main.hs
tools/exe/InvertRule/: CmdLn.hs  Main.hs
tools/exe/QueryEIRules/: CmdLn.hs
tools/exe/ToLatex/: Main.hs
tools/exe/ValidateDerivations/: Main.hs
tools/exe/YamlTest/: CmdLn.hs  Main.hs
tools/src/DyadicRewrite/: Common.hs
tools/src/DyadicRewrite/Generators/: QubitGates.hs  Semantics.hs
tools/src/DyadicRewrite/IO/: Files.hs  LineBasedLogging.hs  PrimitiveLogging.hs
tools/src/DyadicRewrite/Logging/: LineBased.hs
tools/src/DyadicRewrite/Parse/: Circuits.hs  Common.hs  DerivationFile.hs  GeneratorFile.hs  MonWords.hs  Properties.hs  RelationFile.hs  Semantics.hs
tools/src/DyadicRewrite/Rewrite/: Lookup.hs  Rules.hs  Simplification.hs
tools/src/Lafont/Generators/: QubitGates.hs
tools/src/Lafont/IO/: Files.hs  LineBasedLogging.hs  PrimitiveLogging.hs
tools/src/Lafont/Lafont/: Common.hs  Either.hs  Graph.hs  Maybe.hs  Ring.hs  String.hs
tools/src/Lafont/Lafont/Edit/: Dualize.hs  EIRules.hs  Invert.hs
tools/src/Lafont/Lafont/Format/: Common.hs  GraphViz.hs  LaTeX.hs
tools/src/Lafont/Lafont/Generators/: Categories.hs  Display.hs  QubitGates.hs  RuleSem.hs  Semantics.hs
tools/src/Lafont/Lafont/Internal/: Graph.hs
tools/src/Lafont/Lafont/Parse/: Common.hs  DelimLists.hs  DerivationFile.hs  (+5 more)
tools/src/Lafont/Parse/: DerivationFile.hs  GeneratorFile.hs  RelationFile.hs
tools/src/LafontExe/LafontExe/: CheckGenerators.hs  CheckRelations.hs  GraphDeps.hs  InvertRule.hs  QueryEIRules.hs  ValidateDerivations.hs
tools/src/LafontExeTest/LafontExeTest/: HandleTest.hs
tools/test/: DyadicRewrite-Common-Tests.hs  DyadicRewrite-Generators-QubitGates-Tests.hs  DyadicRewrite-Generators-Semantics-Tests.hs  DyadicRewrite-IO-LineBasedLogging-Tests.hs  DyadicRewrite-IO-PrimitiveLogging-Tests.hs  DyadicRewrite-Logging-LineBased-Tests.hs  DyadicRewrite-Parse-Circuits-Tests.hs  DyadicRewrite-Parse-Common-Tests.hs  DyadicRewrite-Parse-DerivationFile-Tests.hs  DyadicRewrite-Parse-GeneratorFile-Tests.hs  DyadicRewrite-Parse-MonWords-Tests.hs  DyadicRewrite-Parse-Properties-Tests.hs  DyadicRewrite-Parse-RelationFile-Tests.hs  DyadicRewrite-Rewrite-Lookup-Tests.hs  DyadicRewrite-Rewrite-Rules-Tests.hs  DyadicRewrite-Rewrite-Simplification-Tests.hs  Lafont-Common-Tests.hs  Lafont-Edit-Dualize-Tests.hs  Lafont-Edit-EIRules-Tests.hs  Lafont-Edit-Invert-Tests.hs  Lafont-Format-Common-Tests.hs  Lafont-Format-GraphViz-Tests.hs  Lafont-Format-LaTeX-Tests.hs  Lafont-Generators-Algebraic-ModP-Tests.hs  Lafont-Generators-Categories-Tests.hs  Lafont-Generators-Display-Tests.hs  Lafont-Generators-QubitGates-Tests.hs  Lafont-Generators-RuleSem-Tests.hs  Lafont-Generators-Semantics-Tests.hs  Lafont-Graph-Tests.hs  Lafont-IO-LineBasedLogging-Tests.hs  Lafont-IO-PrimitiveLogging-Tests.hs  Lafont-Maybe-Tests.hs  Lafont-Named-Tests.hs  Lafont-Parse-Common-Tests.hs  Lafont-Parse-DelimLists-Tests.hs  Lafont-Parse-DerivationFile-Tests.hs  Lafont-Parse-GeneratorFile-Tests.hs  Lafont-Parse-Properties-Tests.hs  Lafont-Parse-RelationFile-Tests.hs  (+12 more)
tools/test/exe/: CheckGenerators-Tests.hs  CheckRelations-Tests.hs  ValidateDerivations-Tests.hs
(+283 files in other folders)
