cabal-version:       2.2

name:                Tietze
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Scott Wesley
maintainer:          ar627383@dal.ca
category:            Math
build-type:          Simple
extra-source-files:  CHANGELOG.md

-----------------------------------------------------------------------------------------
-- Main library.

library
  exposed-modules:     Tietze.Common
                       Tietze.Either
                       Tietze.Graph
                       Tietze.Internal.Graph
                       Tietze.Maybe
                       Tietze.Named
                       Tietze.Ring
                       Tietze.String
                       Tietze.Edit.EIRules
                       Tietze.Edit.Internal.EIRules
                       Tietze.Edit.Invert
                       Tietze.Format.Common
                       Tietze.Format.Internal.GraphViz
                       Tietze.Format.GraphViz
                       Tietze.Format.LaTeX
                       Tietze.Generators.Algebraic.Internal.ModP
                       Tietze.Generators.Algebraic.Internal.Product
                       Tietze.Generators.Algebraic.ModP
                       Tietze.Generators.Algebraic.Product
                       Tietze.Generators.Categories
                       Tietze.Generators.Display
                       Tietze.Generators.QubitGates
                       Tietze.Generators.RuleSem
                       Tietze.Generators.Semantics
                       Tietze.Parse.Common
                       Tietze.Parse.DelimLists
                       Tietze.Parse.DerivationFile
                       Tietze.Parse.GeneratorFile
                       Tietze.Parse.Internal.DerivationFile
                       Tietze.Parse.Internal.GeneratorFile
                       Tietze.Parse.Internal.Properties
                       Tietze.Parse.Internal.RelationFile
                       Tietze.Parse.Internal.Semantics
                       Tietze.Parse.MonWords
                       Tietze.Parse.Properties
                       Tietze.Parse.RelationFile
                       Tietze.Parse.Semantics
                       Tietze.Rewrite.Abstraction
                       Tietze.Rewrite.Common
                       Tietze.Rewrite.Derivations
                       Tietze.Rewrite.Internal.Abstraction
                       Tietze.Rewrite.Internal.Derivations
                       Tietze.Rewrite.Internal.Rules
                       Tietze.Rewrite.Internal.Summary
                       Tietze.Rewrite.Lookup
                       Tietze.Rewrite.Rules
                       Tietze.Rewrite.Simplification
                       Tietze.Rewrite.Summary
  build-depends:       base,    
                       containers,
                       directory,
                       newsynth,
                       split
  hs-source-dirs:      src/Tietze
  default-language:    Haskell2010

-----------------------------------------------------------------------------------------
-- Executable library and executables.

library TietzeExe
  exposed-modules:     TietzeExe.CheckGenerators
                       TietzeExe.CheckRelations
                       TietzeExe.GraphDeps
                       TietzeExe.InvertRule
                       TietzeExe.ToLatex
                       TietzeExe.QueryEIRules
                       TietzeExe.ValidateDerivations
                       TietzeExe.IO.CmdLnFlags
                       TietzeExe.IO.CmdLnParser
                       TietzeExe.IO.Configs
                       TietzeExe.IO.Files
                       TietzeExe.Logic.Derivations
                       TietzeExe.Logic.GraphDeps
                       TietzeExe.Logic.QueryEIRules
                       TietzeExe.Logic.Relations
                       TietzeExe.Logging.ErrorFormat
                       TietzeExe.Logging.Graph
                       TietzeExe.Logging.LineBased
                       TietzeExe.Logging.Primitive
  build-depends:       aeson,
                       base,
                       cmdargs,
                       containers,
                       directory,
                       text,
                       yaml,
                       Tietze
  hs-source-dirs:      src/TietzeExe
  default-language:    Haskell2010

common exe-with-file-io-props
  hs-source-dirs:      exe
  default-language:    Haskell2010
  build-depends:       base, 
                       directory,
                       Tietze,
                       TietzeExe

executable check_generators
  import:              exe-with-file-io-props
  main-is:             CheckGenerators/Main.hs
  other-modules:       CheckGenerators.CmdLn

executable check_relations
  import:              exe-with-file-io-props
  main-is:             CheckRelations/Main.hs
  other-modules:       CheckRelations.CmdLn

executable graph_deps
  import:              exe-with-file-io-props
  main-is:             GraphDeps/Main.hs
  other-modules:       GraphDeps.CmdLn
  build-depends:       split

executable invert_rule
  import:              exe-with-file-io-props
  main-is:             InvertRule/Main.hs
  other-modules:       InvertRule.CmdLn

executable query_eirule
  import:              exe-with-file-io-props
  main-is:             QueryEIRules/Main.hs
  other-modules:       QueryEIRules.CmdLn
  build-depends:       containers,
                       split

executable to_latex
  import:              exe-with-file-io-props
  main-is:             ToLatex/Main.hs
  other-modules:       ToLatex.CmdLn

executable validate_derivations
  import:              exe-with-file-io-props
  main-is:             ValidateDerivations/Main.hs
  other-modules:       ValidateDerivations.CmdLn

executable yaml_test
  import:              exe-with-file-io-props
  main-is:             YamlTest/Main.hs
  other-modules:       YamlTest.CmdLn
  build-depends:       containers

-----------------------------------------------------------------------------------------
-- Unit tests.

common basic-unit-test-props
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       Tietze

common io-unit-test-props
  import:              basic-unit-test-props
  build-depends:       TietzeExe

test-suite lafont-common-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Common-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-edit-invert-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Edit-Invert-Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       containers

test-suite lafont-edit-eirules-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Edit-EIRules-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-either-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Either-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-maybe-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Maybe-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-named-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Named-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-ring-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Ring-Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       newsynth

test-suite lafont-string-tests
  import:              basic-unit-test-props
  main-is:             Lafont-String-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-graph-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Graph-Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       containers

test-suite lafont-format-common-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Format-Common-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-format-graphviz-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Format-GraphViz-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-format-latex-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Format-LaTeX-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-rewrite-abstraction-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Rewrite-Abstraction-Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       containers

test-suite lafont-rewrite-rules-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Rewrite-Rules-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-rewrite-simplification-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Rewrite-Simplification-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-rewrite-summary-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Rewrite-Summary-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-rewrite-lookup-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Rewrite-Lookup-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-rewrite-derivations-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Rewrite-Derivations-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-generators-algebraic-modp-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Generators-Algebraic-ModP-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-generators-algebraic-product-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Generators-Algebraic-Product-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-generators-categories-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Generators-Categories-Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       newsynth

test-suite lafont-generators-display-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Generators-Display-Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       newsynth

test-suite lafont-generators-rulesem-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Generators-RuleSem-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-generators-semantics-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Generators-Semantics-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-generators-qubitgates-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Generators-QubitGates-Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       newsynth

test-suite lafont-parse-common-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-Common-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-parse-delimlists-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-DelimLists-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-parse-monwords-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-MonWords-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-parse-properties-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-Properties-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-parse-generatorfile-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-GeneratorFile-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-parse-relationfile-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-RelationFile-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-parse-derivationfile-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-DerivationFile-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-parse-semantics-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-Semantics-Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       newsynth

test-suite lafontexe-logging-graph-tests
  import:              io-unit-test-props
  main-is:             LafontExe-Logging-Graph-Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       containers

test-suite lafontexe-logging-linebased-tests
  import:              io-unit-test-props
  main-is:             LafontExe-Logging-LineBased-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafontexe-logging-primitive-tests
  import:              io-unit-test-props
  main-is:             LafontExe-Logging-Primitive-Tests.hs
  type:                exitcode-stdio-1.0

-----------------------------------------------------------------------------------------
-- Executable test library and tests.

library TietzeExeTest
  exposed-modules:     TietzeExeTest.HandleTest
  build-depends:       base,
                       directory
  hs-source-dirs:      src/TietzeExeTest
  default-language:    Haskell2010

common exe-test-props
  hs-source-dirs:      test/exe
  default-language:    Haskell2010
  build-depends:       base,
                       Tietze,
                       TietzeExe,
                       TietzeExeTest

test-suite checkgenerators-tests
  import:              exe-test-props
  main-is:             CheckGenerators-Tests.hs
  type:                exitcode-stdio-1.0

test-suite checkrelations-tests
  import:              exe-test-props
  main-is:             CheckRelations-Tests.hs
  type:                exitcode-stdio-1.0

test-suite validatederivations-tests
  import:              exe-test-props
  main-is:             ValidateDerivations-Tests.hs
  type:                exitcode-stdio-1.0
