cabal-version:       2.2

name:                DyadicRewrite
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Scott Wesley
maintainer:          ar627383@dal.ca
category:            Math
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     DyadicRewrite.Common
                       DyadicRewrite.Rewrite.Rules
                       DyadicRewrite.Rewrite.Simplification
                       DyadicRewrite.Generators.Semantics
                       DyadicRewrite.Generators.QubitGates
                       DyadicRewrite.Parse.Common
                       DyadicRewrite.Parse.GeneratorFile
  build-depends:       base >=4.12 && <4.13,
                       containers,
                       split,
                       newsynth
  hs-source-dirs:      src
  default-language:    Haskell2010

common basic-unit-test-props
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       DyadicRewrite

test-suite dyadicrewrite-rewrite-rules-tests
  import:              basic-unit-test-props
  main-is:             DyadicRewrite-Rewrite-Rules-Tests.hs
  type:                exitcode-stdio-1.0

test-suite dyadicrewrite-rewrite-simplification-tests
  import:              basic-unit-test-props
  main-is:             DyadicRewrite-Rewrite-Simplification-Tests.hs
  type:                exitcode-stdio-1.0

test-suite dyadicrewrite-generators-semantics-tests
  import:              basic-unit-test-props
  main-is:             DyadicRewrite-Generators-Semantics-Tests.hs
  type:                exitcode-stdio-1.0

test-suite dyadicrewrite-generators-qubitgates-tests
  import:              basic-unit-test-props
  main-is:             DyadicRewrite-Generators-QubitGates-Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       newsynth

test-suite dyadicrewrite-parse-common-tests
  import:              basic-unit-test-props
  main-is:             DyadicRewrite-Parse-Common-Tests.hs
  type:                exitcode-stdio-1.0

test-suite dyadicrewrite-parse-generatorfile-tests
  import:              basic-unit-test-props
  main-is:             DyadicRewrite-Parse-GeneratorFile-Tests.hs
  type:                exitcode-stdio-1.0

executable interactive
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13
  hs-source-dirs:      src
  default-language:    Haskell2010
