cabal-version:       2.2

name:                DyadicRewrite
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Scott Wesley
maintainer:          ar627383@dal.ca
category:            Math
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     DyadicRewrite.Common
                       DyadicRewrite.Rewrite.Rules
                       DyadicRewrite.Rewrite.Simplification
                       DyadicRewrite.Rewrite.Lookup
                       DyadicRewrite.Generators.Semantics
                       DyadicRewrite.Generators.QubitGates
                       DyadicRewrite.IO.Files
                       DyadicRewrite.IO.LineBasedLogging
                       DyadicRewrite.Parse.Common
                       DyadicRewrite.Parse.MonWords
                       DyadicRewrite.Parse.GeneratorFile
                       DyadicRewrite.Parse.Semantics
                       DyadicRewrite.Parse.RelationFile
                       DyadicRewrite.Parse.DerivationFile
  build-depends:       base >=4.12 && <4.13,
                       containers,
                       directory,
                       split,
                       newsynth
  hs-source-dirs:      src
  default-language:    Haskell2010

common basic-unit-test-props
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       DyadicRewrite

common exe-with-file-io-props
  hs-source-dirs:      exe
  default-language:    Haskell2010
  build-depends:       base >=4.12 && <4.13,
                       directory,
                       DyadicRewrite

test-suite dyadicrewrite-common-tests
  import:              basic-unit-test-props
  main-is:             DyadicRewrite-Common-Tests.hs
  type:                exitcode-stdio-1.0

test-suite dyadicrewrite-rewrite-rules-tests
  import:              basic-unit-test-props
  main-is:             DyadicRewrite-Rewrite-Rules-Tests.hs
  type:                exitcode-stdio-1.0

test-suite dyadicrewrite-rewrite-simplification-tests
  import:              basic-unit-test-props
  main-is:             DyadicRewrite-Rewrite-Simplification-Tests.hs
  type:                exitcode-stdio-1.0

test-suite dyadicrewrite-rewrite-lookup-tests
  import:              basic-unit-test-props
  main-is:             DyadicRewrite-Rewrite-Lookup-Tests.hs
  type:                exitcode-stdio-1.0

test-suite dyadicrewrite-generators-semantics-tests
  import:              basic-unit-test-props
  main-is:             DyadicRewrite-Generators-Semantics-Tests.hs
  type:                exitcode-stdio-1.0

test-suite dyadicrewrite-generators-qubitgates-tests
  import:              basic-unit-test-props
  main-is:             DyadicRewrite-Generators-QubitGates-Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       newsynth

test-suite dyadicrewrite-io-linebasedlogging-tests
  import:              basic-unit-test-props
  main-is:             DyadicRewrite-IO-LineBasedLogging-Tests.hs
  type:                exitcode-stdio-1.0

test-suite dyadicrewrite-parse-common-tests
  import:              basic-unit-test-props
  main-is:             DyadicRewrite-Parse-Common-Tests.hs
  type:                exitcode-stdio-1.0

test-suite dyadicrewrite-parse-monwords-tests
  import:              basic-unit-test-props
  main-is:             DyadicRewrite-Parse-MonWords-Tests.hs
  type:                exitcode-stdio-1.0

test-suite dyadicrewrite-parse-generatorfile-tests
  import:              basic-unit-test-props
  main-is:             DyadicRewrite-Parse-GeneratorFile-Tests.hs
  type:                exitcode-stdio-1.0

test-suite dyadicrewrite-parse-relationfile-tests
  import:              basic-unit-test-props
  main-is:             DyadicRewrite-Parse-RelationFile-Tests.hs
  type:                exitcode-stdio-1.0

test-suite dyadicrewrite-parse-derivationfile-tests
  import:              basic-unit-test-props
  main-is:             DyadicRewrite-Parse-DerivationFile-Tests.hs
  type:                exitcode-stdio-1.0

executable check_generators
  import:              exe-with-file-io-props
  main-is:             check_generators.hs

executable check_relations
  import:              exe-with-file-io-props
  main-is:             check_relations.hs
