cabal-version:       2.2

name:                Lafont
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Scott Wesley
maintainer:          ar627383@dal.ca
category:            Math
build-type:          Simple
extra-source-files:  CHANGELOG.md

-----------------------------------------------------------------------------------------
-- Main library.

library
  exposed-modules:     Lafont.Common
                       Lafont.Graph
                       Lafont.Maybe
                       Lafont.String
                       Lafont.Rewrite.Derivations
                       Lafont.Rewrite.Rules
                       Lafont.Rewrite.Simplification
                       Lafont.Rewrite.Summary
                       Lafont.Rewrite.Lookup
                       Lafont.Generators.Semantics
                       Lafont.Generators.QubitGates
                       Lafont.Parse.Common
                       Lafont.Parse.MonWords
                       Lafont.Parse.Properties
                       Lafont.Parse.GeneratorFile
                       Lafont.Parse.Semantics
                       Lafont.Parse.RelationFile
                       Lafont.Parse.DerivationFile
  build-depends:       base >=4.12 && <4.13,
                       containers,
                       directory,
                       split,
                       newsynth
  hs-source-dirs:      src/Lafont
  default-language:    Haskell2010

-----------------------------------------------------------------------------------------
-- Executable library and executables.

library LafontExe
  exposed-modules:     LafontExe.CheckGenerators
                       LafontExe.CheckRelations
                       LafontExe.ValidateDerivations
                       LafontExe.IO.Files
                       LafontExe.Logging.LineBased
                       LafontExe.Logging.Primitive
  build-depends:       base >=4.12 && <4.13,
                       directory,
                       Lafont
  hs-source-dirs:      src/LafontExe
  default-language:    Haskell2010

common exe-with-file-io-props
  hs-source-dirs:      exe
  default-language:    Haskell2010
  build-depends:       base >=4.12 && <4.13,
                       directory,
                       Lafont,
                       LafontExe

executable check_generators
  import:              exe-with-file-io-props
  main-is:             check_generators.hs

executable check_relations
  import:              exe-with-file-io-props
  main-is:             check_relations.hs

executable validate_derivations
  import:              exe-with-file-io-props
  main-is:             validate_derivations.hs

-----------------------------------------------------------------------------------------
-- Unit tests.

common basic-unit-test-props
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       Lafont

common io-unit-test-props
  import:              basic-unit-test-props
  build-depends:       LafontExe

test-suite lafont-common-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Common-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-maybe-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Maybe-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-string-tests
  import:              basic-unit-test-props
  main-is:             Lafont-String-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-graph-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Graph-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-rewrite-rules-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Rewrite-Rules-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-rewrite-simplification-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Rewrite-Simplification-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-rewrite-summary-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Rewrite-Summary-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-rewrite-lookup-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Rewrite-Lookup-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-rewrite-derivations-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Rewrite-Derivations-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-generators-semantics-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Generators-Semantics-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-generators-qubitgates-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Generators-QubitGates-Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       newsynth

test-suite lafont-parse-common-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-Common-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-parse-monwords-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-MonWords-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-parse-properties-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-Properties-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-parse-generatorfile-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-GeneratorFile-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-parse-relationfile-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-RelationFile-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-parse-derivationfile-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-DerivationFile-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafont-parse-semantics-tests
  import:              basic-unit-test-props
  main-is:             Lafont-Parse-Semantics-Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       newsynth

test-suite lafontexe-logging-linebasedlogging-tests
  import:              io-unit-test-props
  main-is:             LafontExe-Logging-LineBased-Tests.hs
  type:                exitcode-stdio-1.0

test-suite lafontexe-logging-primitivelogging-tests
  import:              io-unit-test-props
  main-is:             LafontExe-Logging-Primitive-Tests.hs
  type:                exitcode-stdio-1.0

-----------------------------------------------------------------------------------------
-- Executable test library and tests.

library LafontExeTest
  exposed-modules:     LafontExeTest.HandleTest
  build-depends:       base >=4.12 && <4.13,
                       directory
  hs-source-dirs:      src/LafontExeTest
  default-language:    Haskell2010

common exe-test-props
  hs-source-dirs:      test/exe
  default-language:    Haskell2010
  build-depends:       base,
                       Lafont,
                       LafontExe,
                       LafontExeTest

test-suite checkgenerators-tests
  import:              exe-test-props
  main-is:             CheckGenerators-Tests.hs
  type:                exitcode-stdio-1.0

test-suite checkrelations-tests
  import:              exe-test-props
  main-is:             CheckRelations-Tests.hs
  type:                exitcode-stdio-1.0

test-suite validatederivations-tests
  import:              exe-test-props
  main-is:             ValidateDerivations-Tests.hs
  type:                exitcode-stdio-1.0
